qgis (2.1.0) UNRELEASED; urgency=low

  * new development version 2.1 after branch of 2.0
  * drop qgis_icon.xpm and use "upstream" version
  * Update Qt dependency to 4.7
  * drop support for Debian squeeze and Ubuntu lucid, maverick, natty and oneiric

 -- Jürgen E. Fischer <jef@norbit.de>  Sat, 18 Jan 2014 23:05:48 +0100

qgis (1.9.0) UNRELEASED; urgency=low

  * new development version 1.9 after branch of 1.8
  * include ows provider
  * include wcs provider
  * symbology-ng-style now in sqlite3
  * include cpt-city files
  * support DEB_BUILD_OPTIONS' parallel=n
  * add python-unittest2 build dependency for maverick and squeeze
  * disable PyQgsRectangle test on lucid (depends on unittest2)
  * add python-psycopg2 and python-qscintilla2 dependency to python-qgis
  * add python-matplotlib dependency to python-qgis-common (for sextante)
  * add support for ubuntu quantal and raring
  * remove js files and add libjs-jquery/libjs-underscore dependency
  * add spatialite qt sql driver
  * include topology plugin
  * drop delimited text and diagram overlay plugin (now in core)
  * drop context_help, function_help and qgis_help.db files
  * use dh_sip
  * add build dependency to xfonts (100dpi, 75dpi, scalable) for tests
  * raise Qt dependency to 4.6

 -- Jürgen E. Fischer <jef@norbit.de>  Sat, 27 Jul 2013 16:45:43 +0200

qgis (1.8.0) UNRELEASED; urgency=low

  * new development version 1.8 after branch
  * include function help in package
  * include heatmap plugin
  * drop extra include path for QtWebkit on oneiric and natty
  * add translations for desktop link
  * add browser desktop entry
  * add support for Debian wheezy and Ubuntu precise
  * build package with internal libspatialite where libspatialite not available
  * drop support for Ubuntu hardy, intrepid, jaunty and karmic
  * add mssqlprovider plugin
  * copyright & policy update (synced from debiangis)
  * run crssync in postinst
  * run tests with xvfb and upload to results to (c)dashboard