@@ -1,0 +1,249 @@
+Source: qgis
+Section: science
+Priority: optional
+Maintainer: QGIS developers <qgis-developer@lists.osgeo.org>
+Build-Depends:
+ bison,
+ cmake (>= 2.8),
+ debhelper (>= 9),
+ flex,
+ grass-dev,
+ libexpat1-dev,
+ libfcgi-dev,
+ libgdal-dev (>= 1.9.0),
+ libgeos-dev (>= 3.0.0),
+ libgsl0-dev,
+ libpq-dev,
+ libproj-dev,
+ libqt4-dev (>= 4.7.0),
+ libqt4-opengl-dev,
+ libqtwebkit-dev,
+ libqwt5-qt4-dev,
+ libspatialite-dev,
+ libsqlite3-dev,
+ libspatialindex-dev,
+ pkg-config,
+ pyqt4-dev-tools,
+ python,
+ python-central (>=0.5),
+ python-dev,
+ libpython2.7-dev,
+ python-qt4 (>=4.1.0),
+ python-qt4-dev (>=4.1.0),
+ python-sip (>= 4.5.0),
+ python-sip-dev (>= 4.5.0),
+ libosgearth-dev,
+ libopenscenegraph-dev,
+ git,
+ doxygen,
+ graphviz,
+ txt2tags,
+ xvfb, xauth,
+ xfonts-base, xfonts-100dpi, xfonts-75dpi, xfonts-scalable
+Build-Conflicts: libqgis-dev, qgis-dev
+Standards-Version: 3.8.4
+XS-Python-Version: current
+Homepage: http://qgis.org/
+
+Package: qgis
+Architecture: any
+Depends: ${shlibs:Depends}, ${misc:Depends}, qgis-providers (= ${binary:Version}), qgis-common (= ${source:Version})
+Recommends: qgis-plugin-grass, python-qgis, qgis-plugin-globe
+Suggests: gpsbabel
+Conflicts: uim-qt3
+Description: Geographic Information System (GIS)
+ A Geographic Information System (GIS) manages, analyzes, and displays
+ databases of geographic information. QGIS supports shape file viewing and
+ editing, spatial data storage with PostgreSQL/PostGIS, projection on-the-fly,
+ map composition, and a number of other features via a plugin interface. QGIS
+ also supports display of various georeferenced raster and Digital Elevation
+ Model (DEM) formats including GeoTIFF, Arc/Info ASCII Grid, and USGS ASCII
+ DEM.
+
+Package: qgis-common
+Architecture: all
+Depends: ${misc:Depends}
+Description: QGIS - architecture-independent data
+ QGIS is a Geographic Information System (GIS) which manages, analyzes and
+ display databases of geographic information.
+ .
+ This package contains architecture-independent supporting data files for use
+ with QGIS.
+
+Package: libqgis{QGIS_ABI}
+Architecture: any
+Section: libs
+Depends: ${shlibs:Depends}, ${misc:Depends}
+Replaces: qgis (<=0.9.2rc1), libqgis-core1, libqgis-gui1, libqgis0, libqgis1
+Conflicts: libqgis-core{QGIS_ABI}, libqgis-gui{QGIS_ABI}
+Description: QGIS - shared libraries
+ QGIS is a Geographic Information System (GIS) which manages, analyzes and
+ display databases of geographic information.
+ .
+ This package contains the shared core and gui library that provide an
+ interface for plugins and stand-alone applications.
+
+Package: libqgis-dev
+Architecture: any
+Section: libdevel
+Depends:
+ grass-dev,
+ libexpat1-dev,
+ libgdal-dev (>= 1.9.0),
+ libgeos-dev (>= 3.0.0),
+ libgsl0-dev,
+ libpq-dev,
+ libproj-dev,
+ libqgis{QGIS_ABI} (= ${binary:Version}),
+ libqt4-dev (>=4.6.0),
+ libsqlite3-dev,
+ python-qt4 (>=4.1.0),
+ python-qt4-dev (>=4.1.0),
+ qt4-designer (>=4.6.0),
+ ${misc:Depends}
+Provides: qgis-dev
+Replaces: qgis-dev, libqgis1-dev, libqgis1.4.0-dev
+Description: QGIS - development files
+ QGIS is a Geographic Information System (GIS) which manages, analyzes and
+ display databases of geographic information.
+ .
+ This package contains the headers and libraries needed to develop plugins for
+ QGIS.
+
+Package: qgis-plugin-grass
+Architecture: any
+Depends: qgis (= ${binary:Version}), qgis-plugin-grass-common (= ${source:Version}), ${shlibs:Depends}, ${misc:Depends}, grass{GRASS_ABI}
+Description: GRASS plugin for QGIS
+ QGIS is a Geographic Information System (GIS) which manages, analyzes and
+ display databases of geographic information.
+ .
+ This plugin enables GRASS data access in the QGIS geographic data viewer.
+
+Package: qgis-plugin-grass-common
+Architecture: all
+Depends: python2.7, ${python:Depends}, ${misc:Depends}
+Replaces: qgis-common (<< 1.5)
+Breaks: qgis-common (<< 1.5)
+Description: GRASS plugin for QGIS - architecture-independent data
+ QGIS is a Geographic Information System (GIS) which manages, analyzes and
+ display databases of geographic information.
+ .
+ This package contains architecture-independent supporting data files for use
+ with the QGIS GRASS plugin.
+
+Package: python-qgis
+Section: python
+Architecture: any
+Depends:
+ python-qt4,
+ python-sip,
+ python-qgis-common (= ${source:Version}),
+ python-psycopg2,
+ python-qscintilla2,
+ ${python:Depends},
+ ${misc:Depends},
+ ${sip:Depends}
+Provides: ${python:Provides}
+Description: Python bindings to QGIS
+ QGIS is a Geographic Information System (GIS) which manages, analyzes and
+ display databases of geographic information.
+ .
+ This package contains the files for the Python support.
+
+Package: python-qgis-common
+Section: python
+Architecture: all
+Provides: ${python:Provides}
+Depends:
+ gdal-bin,
+ python-gdal,
+ python-matplotlib,
+ ${python:Depends},
+ ${misc:Depends},
+ ${sip:Depends}
+Description: Python bindings to QGIS - architecture-independent files
+ QGIS is a Geographic Information System (GIS) which manages, analyzes and
+ display databases of geographic information.
+ .
+ This package contains architecture-independent files for the QGIS Python
+ bindings.
+
+Package: qgis-providers
+Architecture: any
+Depends:
+ qgis-providers-common (= ${source:Version}),
+ ${shlibs:Depends},
+ ${misc:Depends}
+Replaces: qgis (<= 1.6)
+Breaks: qgis (<= 1.6)
+Description: collection of data providers to QGIS
+ QGIS is a Geographic Information System (GIS) which manages, analyzes and
+ display databases of geographic information.
+ .
+ This package contains the provider plugins for QGIS.
+
+Package: qgis-providers-common
+Architecture: all
+Replaces: qgis-common (<= 1.6)
+Breaks: qgis-common (<= 1.6)
+Depends: ${misc:Depends}
+Description: collection of data providers to QGIS - architecture-independent files
+ QGIS is a Geographic Information System (GIS) which manages, analyzes and
+ display databases of geographic information.
+ .
+ This package contains architecture-independent files for the QGIS providers.
+
+Package: qgis-mapserver
+Architecture: any
+Depends:
+ qgis-providers (= ${binary:Version}),
+ ${shlibs:Depends},
+ ${misc:Depends}
+Description: QGIS mapserver
+ QGIS is a Geographic Information System (GIS) which manages, analyzes and
+ display databases of geographic information.
+ .
+ This package contains the QGIS mapserver.
+
+Package: qgis-sqlanywhere
+Architecture: any
+Depends: ${shlibs:Depends}, ${misc:Depends}
+Conflicts: qgis-sqlanywhere1.7.0, qgis-sqlanywhere1.7.1, qgis-sqlanywhere1.8.0
+Description: QGIS sql anywhere plugin and provider
+ QGIS is a Geographic Information System (GIS) which manages, analyzes and
+ display databases of geographic information.
+ .
+ This package contains the QGIS sqlanywhere plugin and provider.
+
+Package: qgis-api-doc
+Architecture: all
+Section: doc
+Depends: libjs-jquery
+Description: QGIS API documentation
+ QGIS is a Geographic Information System (GIS) which manages, analyzes and
+ display databases of geographic information.
+ .
+ This package contains the QGIS API documentation.
+
+Package: qgis-plugin-globe
+Architecture: any
+Depends:
+ qgis (= ${binary:Version}),
+ qgis-plugin-globe-common (= ${source:Version}),
+ ${shlibs:Depends},
+ ${misc:Depends}
+Description: OSG globe plugin for QGIS
+ QGIS is a Geographic Information System (GIS) which manages, analyzes and
+ display databases of geographic information.
+ .
+ This plugin enables 3D viewing using OSG globe in the QGIS.
+
+Package: qgis-plugin-globe-common
+Architecture: all
+Description: OSG GLOBE plugin for QGIS - architecture-independent data
+ QGIS is a Geographic Information System (GIS) which manages, analyzes and
+ display databases of geographic information.
+ .
+ This package contains architecture-independent supporting data files for use
+ with the QGIS GLOBE plugin.
+
