@@ -1,0 +1,5 @@
+usr/lib/python*/*-packages/qgis/*.py
+usr/lib/python*/*-packages/qgis/*.so
+usr/lib/python*/*-packages/pyspatialite/*.py
+usr/lib/python*/*-packages/pyspatialite/*.so
+usr/lib/libqgispython.so.{QGIS_ABI}
